refactor + fix: major refactor in logic, names and bugfixes
