# backend/users/controller.go
@@ -3,6 +3,8 @@ package users
 
 import (
 	customErrors "backend/custom_errors"
+	"backend/middlewares"
+	"backend/users/enums"
 	"backend/users/interfaces"
 	"backend/users/models"
 	"net/http"
@@ -16,6 +18,18 @@ type Controller struct {
 
 func NewController(s interfaces.Service) *Controller {
 	return &Controller{service: s}
+}
+
+func (c *Controller) RegisterPublicRoutes(r *gin.Engine) {
+	group := r.Group("/users")
+	group.POST("", c.Create)
+}
+
+func (c *Controller) RegisterPrivateRoutes(r *gin.RouterGroup) {
+	group := r.Group("/users")
+	group.GET("/:id", c.FindByID)
+	group.PUT("/:id", c.Update)
+	group.DELETE("/:id", middlewares.RequireRole(enums.Admin), c.Delete)
 }
 
 // Create godoc
@@ -49,9 +63,11 @@ func (c *Controller) Create(ctx *gin.Context) {
 // @Summary		Busca usuário por ID
 // @Tags			users
 // @Produce		json
+// @Security		BearerAuth
 // @Param			id	path		string	true	"ID do usuário"
 // @Success		200	{object}	models.User
 // @Failure		400	{object}	map[string]string
+// @Failure		403	{object}	map[string]string
 // @Failure		404	{object}	map[string]string
 // @Router			/users/{id} [get]
 func (c *Controller) FindByID(ctx *gin.Context) {
@@ -74,9 +90,12 @@ func (c *Controller) FindByID(ctx *gin.Context) {
 // Delete godoc
 // @Summary		Deleta um usuário
 // @Tags			users
+// @Produce		json
+// @Security		BearerAuth
 // @Param			id	path	string	true	"ID do usuário"
 // @Success		204
 // @Failure		400	{object}	map[string]string
+// @Failure		403	{object}	map[string]string
 // @Failure		500	{object}	map[string]string
 // @Router			/users/{id} [delete]
 func (c *Controller) Delete(ctx *gin.Context) {
@@ -95,10 +114,12 @@ func (c *Controller) Delete(ctx *gin.Context) {
 // @Tags			users
 // @Accept			json
 // @Produce		json
+// @Security		BearerAuth
 // @Param			id		path		string						true	"ID do usuário"
 // @Param			user	body		models.CreateUserRequest	true	"Payload do usuário"
 // @Success		200		{object}	models.User
 // @Failure		400		{object}	map[string]string
+// @Failure		403		{object}	map[string]string
 // @Failure		404		{object}	map[string]string
 // @Failure		500		{object}	map[string]string
 // @Router			/users/{id} [put]
@@ -129,12 +150,4 @@ func (c *Controller) Update(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, newUser)
-}
-
-func (c *Controller) RegisterRoutes(r *gin.Engine) {
-	group := r.Group("/users")
-	group.POST("", c.Create)
-	group.GET("/:id", c.FindByID)
-	group.PUT("/:id", c.Update)
-	group.DELETE("/:id", c.Delete)
 }
